--- a/Db/bootstrap/test.html
+++ b/Db/bootstrap/test.html
@@ -36,20 +36,8 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li>
+
+
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -58,29 +46,101 @@
           </div>
         </div>
       </nav>
+    <br>
 
       <!-- body -->
-
+    <div class="container-fluid object-bar">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-md-6">
           <div class="card">
+
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Window</h5>
+                <div class="row">
+                  <div class="col-md-6">
+                      <p class="card-text">Status</p>
+                  </div>
+                  <div class="col-md-5">
+                      <p> Close </p>
+                    <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                        <button type="button" class="btn btn-danger">Open</button>
+                        <button type="button" class="btn btn-success">Close</button>
+                    </div>
+                  </div>
+                </div>
             </div>
+
+            <div class="card-body">
+              <h5>Window Sensor</h5>
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="card-body">
+                          <h5 class="card-title">Temp</h5>
+                          <h6>25 Celsius</h6>
+                      </div>
+                    </div>
+
+                    <div class="col-md-5">
+                        <div class="card-body">
+                            <h5 class="card-title">Light-LDR</h5>
+                            <h6>25</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+          </div>
+
+
+        </div>
+
+
+
+
+
+        <div class="col-md-6">
+          <div class="card">
+
+            <div class="card-body">
+              <h5 class="card-title">Curtain</h5>
+              <div class="row">
+                  <div class="col-md-6">
+                      <p class="card-text">Status</p>
+                  </div>
+                  <div class="col-md-5">
+                      <p> Close </p>
+                    <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                        <button type="button" class="btn btn-danger">Open</button>
+                        <button type="button" class="btn btn-success">Close</button>
+                    </div>
+                  </div>
+                </div>
+            </div>
+
+            <div class="card-body">
+              <h5>Curtain Sensor</h5>
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="card-body">
+                          <h5 class="card-title">Sensor??</h5>
+                          <h6>Number values</h6>
+                      </div>
+                    </div>
+
+
+                </div>
+            </div>
+
+
           </div>
         </div>
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
+
       </div>
+
+
+
+
+    </div>
 
 
 
