--- a/bootstrap/setcondition.html
+++ b/bootstrap/setcondition.html
@@ -26,35 +26,6 @@
     <div class="container">
       <h3 class="">Setup</h3>
       <div class="card-box" >
-
-        <div class="row row-cols-auto d-flex align-items-center" >
-          <div class="col">
-              <p>Open</p>
-          </div>
-          <div class="col">
-            <p>when</p>
-          </div>
-          <div class="col">
-            <p>Temperature </p>
-          </div>
-          <div class="col">
-            <p>is more </p>
-          </div>
-          <div class="col">
-            <p>than or equal to </p>
-          </div>
-          <div class="col">
-            <p>25 c</p>
-          </div>
-          <div class="col">
-            <button class="btn-del">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16" color="white">
-                <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
-              </svg>
-            </button>
-          </div>
-        </div><hr>
-
         <div class="row d-flex align-items-center" >
           <div class="col-3 col-md-1 ">
               <p>Open</p>
@@ -62,19 +33,19 @@
           <div class="col-3 col-md-1  ">
             <p>when</p>
           </div>
-          <div class="col-4 col-md-2  ">
+          <div class="col-5 col-md-2  ">
             <p>humidity </p>
           </div>
-          <div class="col-3 col-md-2  ">
+          <div class="col">
             <p>is more </p>
           </div>
-          <div class="col-4 col-md-3 ">
+          <div class="col oneline">
             <p>than or equal to </p>
           </div>
-          <div class="col-2 col-md-2 ">
+          <div class="col">
             <p>25 c</p>
           </div>
-          <div class="col-2 col-md-1 flex-left">
+          <div class="col">
             <button class="btn-del">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16" color="white">
                 <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
@@ -89,7 +60,7 @@
         <form class="form-inline" action="/object/{{id}}/setup" method="POST">
           <div class="row row-cols-7 d-flex align-items-center">
           <div class="col-3 col-md-1 oneline">
-                <div class="custom-select" style="display: inline;">
+                <div class="custom-select">
                   <select name="status">
                     <option value="close">close</option>
                     <option value="open">open</option>
@@ -100,7 +71,7 @@
                 <label>When </label>
               </div>
 
-              <div class="col">
+              <div class="col-5 col-md-2">
                 <div class="custom-select" style=>
                   <select id="id" name="id">
                     {% for sensor in sensors %}
