edited templates formats

--- a/bootstrap/control.html
+++ b/bootstrap/control.html
@@ -27,8 +27,8 @@
       <div class="btn-box" >
           <div class="status d-flex align-items-end flex-column bd-highlight mb-3">
             <div class="align-self-center">
-                <button class="btn">Open</button>
-                <button class="btn">Close</button>
+                <button class="btn-control">Open</button>
+                <button class="btn-control">Close</button>
             </div>
           </div>
       </div>
@@ -40,7 +40,7 @@
       </div>
 
       <div class="sensor-box">
-          <div class="row">
+          <div class="row" >
               <span class="vertical-line1"></span>
               <span class="vertical-line2"></span>
               <div class="col">
@@ -61,10 +61,12 @@
       <button class="set-box">
           <div class="row" >
             <p class="col">Set Condition</p>
-              <p class="col right">
+            <p class="col right">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-compact-right" viewBox="0 0 16 16">
                       <path fill-rule="evenodd" d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"/>
-                    </svg></p></div>
+                    </svg>
+            </p>
+          </div>
       </button>
 
       <button class="set-box">
@@ -73,7 +75,9 @@
               <p class="col right">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-compact-right" viewBox="0 0 16 16">
                   <path fill-rule="evenodd" d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"/>
-                </svg></p></div>
+                </svg>
+              </p>
+          </div>
       </button>
 
 
