--- a/bootstrap/settime.html
+++ b/bootstrap/settime.html
@@ -84,16 +84,13 @@
                 </div>
               </div>
               <div class="col-8 col-md-9 center">
-                <div style="display: inline-block;">
                   <label> at time </label> <!-- &emsp; -->
-                  <input class="custom-input" type="number" style="width:80px; display: inline;"  min="0" max="100" name="value">
+                  <input class="custom-input" type="number" min="0" max="100" name="value">
                   <label> : </label>
-                  <input class="custom-input" type="number" style="width:80px; display: inline;"  min="0" max="100" name="value">
-                </div>
+                  <input class="custom-input" type="number" min="0" max="100" name="value">
               </div>
             </div>
           </div>
-
           <div class="col-6 flex-left">
             <div class="">
               <label class="dayselect">
@@ -126,7 +123,6 @@
               </label>
             </div>
           </div>
-
           <div class="col-1 flex-left">
             <div class="custom-select">
             <button type="submit" class="btn btn-primary">save</button>
